First draft of the BSN chapter

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -517,6 +517,15 @@ isbn="978-3-540-69753-4"
   howpublished = {\url{https://github.com/hub-se/PSP-UPPAAL}}
 }
 
+@article{vogel2022property,
+  title={A property specification pattern catalog for real-time system verification with UPPAAL},
+  author={Vogel, Thomas and Carwehl, Marc and Rodrigues, Gena{\'\i}na Nunes and Grunske, Lars},
+  journal={Information and Software Technology},
+  pages={107100},
+  year={2022},
+  publisher={Elsevier}
+}
+
 @misc{Modelica,
   title = {Modelica Language},
   howpublished = {\url{https://modelica.org/modelicalanguage.html}},
@@ -556,6 +565,34 @@ doi = {10.3384/ECP18154206}
   number={},
   pages={224-230},
   doi={10.1109/SEAMS51251.2021.00037}}
+
+@misc{lo2005body,
+  title={Body sensor network--a wireless sensor platform for pervasive healthcare monitoring},
+  author={Lo, Benny PL and Thiemjarus, Surapa and King, Rachel and Yang, Guang-Zhong},
+  year={2005},
+  publisher={na}
+}
+
+@article{pessoa2017building,
+  title={Building reliable and maintainable dynamic software product lines: An investigation in the body sensor network domain},
+  author={Pessoa, Leonardo and Fernandes, Paula and Castro, Thiago and Alves, Vander and Rodrigues, Gena{\'\i}na N and Carvalho, Hervaldo},
+  journal={Information and Software Technology},
+  volume={86},
+  pages={54--70},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{henzinger1994symbolic,
+  title={Symbolic model checking for real-time systems},
+  author={Henzinger, Thomas A and Nicollin, Xavier and Sifakis, Joseph and Yovine, Sergio},
+  journal={Information and computation},
+  volume={111},
+  number={2},
+  pages={193--244},
+  year={1994},
+  publisher={Elsevier}
+}
 
 %% CPS
 @article{2014PerceptionsSOTAV&VCPS,
