--- a/qualificacao.tex
+++ b/qualificacao.tex
@@ -12,6 +12,7 @@
 \usepackage{pdfpages}% incluir PDFs, usado no apêndice
 \usepackage{xcolor, soul}
 \sethlcolor{yellow}
+\usepackage{makecell}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Informações do Trabalho
@@ -43,6 +44,7 @@
 \begin{document}%
     \capitulo{1_Introduction}{Introduction}\label{sec:intro}
     \capitulo{2_Background}{Background}
+    \capitulo{BSN}{Running Example: Body Sensor Network}
     \capitulo{4_Proposal}{An AIS-based approach to reduce uncertainty in self-adaptive systems}
     \capitulo{3_RelatedWork}{Related work}
     \capitulo{5_Evaluation}{Schedule}
