Enhanced the first phase of the approach

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -555,6 +555,83 @@ title = {The OpenModelica Integrated Modeling, Simulation and Optimization Envir
 doi = {10.3384/ECP18154206}
 }
 
+% MBSA
+@article{baras2019formal,
+  title={Formal Methods and Tool-Suites for CPS Security, Safety and Verification},
+  author={Baras, John S},
+  journal={Engineering Secure and Dependable Software Systems},
+  volume={53},
+  pages={1},
+  year={2019},
+  publisher={IOS Press}
+}
+
+@article{deng2019modeling,
+  title={Modeling and Simulation of CPS based on SysML and Modelica (KG)},
+  author={Deng, Fei},
+  year={2019}
+}
+
+@article{bouskela2022formal,
+  title={Formal requirements modeling for cyber-physical systems engineering: An integrated solution based on FORM-L and Modelica},
+  author={Bouskela, Daniel and Falcone, Alberto and Garro, Alfredo and Jardin, Audrey and Otter, Martin and Thuy, Nguyen and Tundis, Andrea},
+  journal={Requirements Engineering},
+  volume={27},
+  number={1},
+  pages={1--30},
+  year={2022},
+  publisher={Springer}
+}
+
+@inproceedings{nguyen2014form,
+  title={FORM-L: A Modelica Extension for properties modelling illustrated on a practical example},
+  author={Nguyen, Thuy},
+  booktitle={Proceedings of the 10 th International Modelica Conference; March 10-12; 2014; Lund; Sweden},
+  number={96},
+  pages={1227--1236},
+  year={2014},
+  organization={Link{\"o}ping University Electronic Press}
+}
+
+@article{mohamed2021model,
+  title={Model-Driven Engineering Tools and Languages for Cyber-Physical Systems--A Systematic Literature Review},
+  author={Mohamed, Mustafa Abshir and Kardas, Geylani and Challenger, Moharram},
+  journal={IEEE Access},
+  volume={9},
+  pages={48605--48630},
+  year={2021},
+  publisher={IEEE}
+}
+
+% sysml
+@article{balestrini2015object,
+  title={An object-oriented and executable SysML framework for rapid model development},
+  author={Balestrini-Robinson, Santiago and Freeman, Dane F and Browne, Daniel C},
+  journal={Procedia Computer Science},
+  volume={44},
+  pages={423--432},
+  year={2015},
+  publisher={Elsevier}
+}
+
+% MATLAB
+@book{higham2016matlab,
+  title={MATLAB guide},
+  author={Higham, Desmond J and Higham, Nicholas J},
+  year={2016},
+  publisher={SIAM}
+}
+
+% FMI
+@inproceedings{blochwitz2011functional,
+  title={The functional mockup interface for tool independent exchange of simulation models},
+  author={Blochwitz, Torsten and Otter, Martin and Arnold, Martin and Bausch, Constanze and Clau{\ss}, Christoph and Elmqvist, Hilding and Junghanns, Andreas and Mauss, Jakob and Monteiro, Manuel and Neidhold, Thomas and others},
+  booktitle={Proceedings of the 8th international Modelica conference},
+  pages={105--114},
+  year={2011},
+  organization={Link{\"o}ping University Press}
+}
+
 % BSN
 @INPROCEEDINGS{2021BSN,
   author={Gil, Eric Bernd and Caldas, Ricardo and Rodrigues, Arthur and da Silva, Gabriel Levi Gomes and Rodrigues, Genaína Nunes and Pelliccione, Patrizio},
@@ -595,6 +672,15 @@ doi = {10.3384/ECP18154206}
 }
 
 %% CPS
+@incollection{aleksandrowicz2018designing,
+  title={Designing reliable cyber-physical systems},
+  author={Aleksandrowicz, Gadi and Arbel, Eli and Bloem, Roderick and ter Braak, Timon D and Devadze, Sergei and Fey, Goerschwin and Jenihhin, Maksim and Jutman, Artur and Kerkhoff, Hans G and K{\"o}nighofer, Robert and others},
+  booktitle={Languages, Design Methods, and Tools for Electronic System Design},
+  pages={15--38},
+  year={2018},
+  publisher={Springer}
+}
+
 @article{2014PerceptionsSOTAV&VCPS,
 author = {Zheng, Xi and Julien, Christine and Kim, Miryung and Khurshid, Sarfraz},
 year = {2015},
