--- a/tex/4_Proposal.tex
+++ b/tex/4_Proposal.tex
@@ -1,13 +1,8 @@
-In this work, we provide a paradigm to aid in the creation of Cyber-physical systems that uses the Negative Selection Algorithm to reveal operational circumstances of the CPS that may effect the fulfillment of non-functional requirements and real-time properties. The first and foremost is to assist the early stages of the system conception by reducing the uncertainties in context variability. The secondary goal, a byproduct of the first, focuses on increasing the ability to confidently and systematically monitor and analyze CPSs. The methodology combines learning techniques with different assurance provision methods in order to account for contextual uncertainties that could impair the dependability of the CPS.
+In this work, we provide a paradigm to aid in the creation of Cyber-physical systems that uses the Negative Selection Algorithm to reveal operational circumstances of the CPS that may effect the fulfillment of non-functional requirements and real-time properties. Our proposed technique has two primary objectives. The first is to aid the analyst in the verification process during the early phases of system development by discovering patterns in simulated execution data linked to property violations. The secondary goal, a byproduct of the first, focuses on increasing the ability to confidently and systematically monitor and analyze CPSs. The methodology combines learning techniques with different assurance provision methods in order to account for the variability in the system behavior that could impair the dependability of the CPS.
 
 % To bypass both time and space limitations, we aim at merging the context discovery potential by means of artificial intelligence over monitored data, typical of runtime approaches, with the perks of having a robust modeling process at design time
 
-This chapter is structured as follows: First, we provide an overview of the framework, explaining in high level each step. Next, the Immune System metaphor is described, showing the relations thought to better understand the approach. Finally, each step is further detailed in the subsequent sections.
-
-
-% \hl{SHOULD I REMOVE THE SECONDARY GOAL? IF SO, DO I NEED THE OBSERVERS? IF NOT, HOW TO PLACE IT IN A WAY THAT I DON'T HAVE TO IMPLEMENT THE SYSTEM?}
-
-% \hl{WHERE SHOULD I PLACE THE DESCRIPTION OF THE METAPHOR?}
+This chapter is structured as follows: First, we provide an overview of the framework, explaining in high level each step. Next, each step is further detailed in the subsequent sections.
 
 \section{Overview}
 
@@ -17,10 +12,13 @@ This chapter is structured as follows: First, we provide an overview of the fram
 
 
 The framework comprises two main steps, as depicted in Figure \ref{fig:FrameworkOverview}.
-The fist step uses as input the Contextual Goal Model (CGM) specification of the CPS to be developed. Then, a model-checking process takes place to provide formal evidences that the requirements of the system are satisfied. This is done by first modeling the main components of the SAS in a verification tool, like UPPAAL \cite{UPPAAL}. Then, a set of real-time properties are derived from the specification, so that the correctness and completeness of system may be assured. 
+The fist step uses as input the Contextual Goal Model (CGM) specification of the CPS to be developed, the system properties that were specified based on the CGM and the observers derived from them. With that in hand, we implement a prototype of the system, based on the expected behavior and environment conditions. The prototype will be composed of the modules of the system, the physical processes that may impact the operationalization, and some "naive" observers, for the purpose of monitoring the system properties during the execution. Next, the prototype is run, and the operation dataset is extracted, containing the traces of execution, the consumption of resources and the context conditions at each moment of the execution.
 
-After the assurances have been provided through model-checking, we implement a prototype of the system, based on the expected behavior and on the context conditions. Besides that, naive observers are also implemented, derived from a property specification pattern catalog, and serve the purpose of monitoring the system properties during the execution. The prototype is run, and a dataset is extracted, containing the traces of execution, the consumption of resources and the context conditions at each moment of the execution.
+% The fist step uses as input the Contextual Goal Model (CGM) specification of the CPS to be developed, the system properties that were specified based on the CGM and the observers derived from. Then, a model-checking process takes place to provide formal evidences that the requirements of the system are satisfied. This is done by first modeling the main components of the SAS in a verification tool, like UPPAAL \cite{UPPAAL}. Then, a set of real-time properties are derived from the specification, so that the correctness and completeness of system may be assured. 
 
+% After the assurances have been provided through model-checking, we implement a prototype of the system, based on the expected behavior and on the context conditions. Besides that, naive observers are also implemented, derived from a property specification pattern catalog, and serve the purpose of monitoring the system properties during the execution. The prototype is run, and a dataset is extracted, containing the traces of execution, the consumption of resources and the context conditions at each moment of the execution.
+
+FIXME
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=0.999\textwidth, keepaspectratio]{img/overview_framework2.png}
@@ -28,41 +26,50 @@ After the assurances have been provided through model-checking, we implement a p
 	\label{fig:FrameworkOverview}
 \end{figure}
 
-The second step happens right after the first one, and is performed individually for each property in the real-time property set. Initially, the operation data goes through a feature engineering process aiming at the labeling and characterization of the data traces that did not satisfy the particular property being examined. Next, the labeled data is analyzed, and  the Negative Selection Algorithm is used with the dataset. A collection of r-chunk detectors are produced as a result of this operation. These detectors, specialized in matching the property violation data, are carefully examined so that the patterns discovered can be comprehended. 
+The second step happens right after the first one, and is performed individually for each property in the real-time property set. Initially, the operation data goes through a feature engineering process aiming at the labeling and characterization of the data traces in relation to the particular property being examined. Then, the labeled data is analyzed, and the Negative Selection Algorithm is used with the dataset. A collection of R-chunk detectors are produced as a result of this operation. These detectors, specialized in matching the property violation data, are carefully examined so that the patterns discovered can be comprehended. 
 
-The outcome of this process is the identification of relevant context conditions that were not initially considered when designing the property. This information is, then, used to refine the property, and thus, enhance or create new observers. The enhanced observers trigger a new execution of the first step. The described steps go back and forth until no new relevant information is found. 
+The outcome of this process is the identification of relevant environment conditions and system behavior that were not initially considered when designing the property. This information is, then, used to refine the property, and thus, enhance or create new observers.
 
 
 \section{Innate Immunity through Assurances}
 % \section{From Goals to Properties}
 
-The initial step of our approach has two primary objectives: the provision of assurances and the implementation of a prototype of the system being developed. An earlier project from our research lab, where the goal specification is mapped into models for real-time analysis, served as inspiration for both functions \cite{seams2018}.
 
-\subsection{Model Checking}
 
-This activity is related to the first goal. Providing assurances for the SAS happens by initially modeling the core architectural elements, along with their behavior, then by specifying a set of properties of interest, and finally, by conducting a model checking process in a verification tool like UPPAAL \cite{UPPAAL} to assert the system's correctness and the satisfiability of the properties.
+% The initial step of our approach has two primary objectives: the provision of assurances and the implementation of a prototype of the system being developed. An earlier project from our research lab, where the goal specification is mapped into models for real-time analysis, served as inspiration for both functions \cite{seams2018}.
 
-First, the model is derived directly from the CGM, the input for this process. The intended behavior of the leaf-tasks are modeled as timed automata, according to the system architecture. The automata denote module templates, meaning that they might be reused if two instances share the same behavior. One of the possible modeling strategies is to use guard conditions and different locations in the model to portray the progression of the module's behavior, and thus, its life cycle. Hence, the progress and fulfillment of the CGM task's behavior may be depicted in the UPPAAL model as reachable states or locations, enabling the usage of reachability properties when verifying the correctness of the system.
+% \subsection{Model Checking}
 
-Second, with the formalized model in hand, the next activity is to specify the set of properties that will be verified. In this sense, we might use the Autili et al. \cite{2015PropertySpecCatalog} property specification pattern catalog and framework (PSPFramework) to define the CGM properties. Property specification patterns have been effectively utilized to bypass the pragmatic hurdles of specification formalism, while still maintaining syntactic correctness and a true reflection of the system's intuition. This catalog comprises a list of property patterns, or categories, each relying on a set of structured English phrases, composed of terms that are denotable in temporal logics.
+% This activity is related to the first goal. Providing assurances for the SAS happens by initially modeling the core architectural elements, along with their behavior, then by specifying a set of properties of interest, and finally, by conducting a model checking process in a verification tool like UPPAAL \cite{UPPAAL} to assert the system's correctness and the satisfiability of the properties.
 
-Each system property is specified in the PSPFramework in a top-down manner. A property category is first chosen from the catalog patterns list by the software developer, who then refines it with the specific scope and complementary attributes, like time or probability constraints. As a consequence, a sentence in structured English is created, which will then be mapped to an appropriate logic formalism. The mapping rule takes into account the property category and scope defined earlier to match a logic formula template from the catalog, which is written in a target language, like CSL or TCTL. Finally, the given time and probability constraints are inserted into the formula using an attribute assessment mechanism. The result is a formally expressed property, ready to be verified. In our work, the resultant property set will be written in Timed Computational Tree Logic (TCTL) \cite{1996TCTL}, since that is the language used by UPPAAL when verifying the formalized model's real-time features. 
+% First, the model is derived directly from the CGM, the input for this process. The intended behavior of the leaf-tasks are modeled as timed automata, according to the system architecture. The automata denote module templates, meaning that they might be reused if two instances share the same behavior. One of the possible modeling strategies is to use guard conditions and different locations in the model to portray the progression of the module's behavior, and thus, its life cycle. Hence, the progress and fulfillment of the CGM task's behavior may be depicted in the UPPAAL model as reachable states or locations, enabling the usage of reachability properties when verifying the correctness of the system.
 
-Our work also leverages the use of the Observer Technique as an additional step towards providing evidence that the system behaves as expected. This approach is utilized in the checker to allow the verification of properties that go beyond simple reachability \cite{1998ReachabilityObs}. It consists of the translation of the TCTL formulas to finite-state automata that are added the model to be verified. These state machines are engineered to reach error states only when the observed property in the system model is violated \cite{1999Observers}. 
-% Formally, the Observer can be defined as an automaton \(T_{\phi}\) that interacts with the system \(S\) in a way that none of the error states of \(T_{\phi}\) are reached if the property \(\phi\) is satisfied. 
-The translation is performed by using an Observer Template catalog \cite{2022PSP} designed for model checking real-time systems in UPPAAL. Analogously to the property specification process, the property pattern and its corresponding scope are mapped to Observer UPPAAL template models in the catalog. As a result, each monitorable property will have a corresponding observer automata in the system model.
+% Second, with the formalized model in hand, the next activity is to specify the set of properties that will be verified. In this sense, we might use the Autili et al. \cite{2015PropertySpecCatalog} property specification pattern catalog and framework (PSPFramework) to define the CGM properties. Property specification patterns have been effectively utilized to bypass the pragmatic hurdles of specification formalism, while still maintaining syntactic correctness and a true reflection of the system's intuition. This catalog comprises a list of property patterns, or categories, each relying on a set of structured English phrases, composed of terms that are denotable in temporal logics.
 
-Finally, the generated formulas will be verified for reachability, safety or liveness in the modeled system, by a process called Model Checking. The TCTL model-checking problem is to determine for a particular timed automaton TA and TCTL formula \(\phi\) whether TA  \(\vDash \phi\) \cite{2008PrinciplesModelChecking}. In this work, a tool named UPPAAL \cite{UPPAAL} will be used to solve this problem by algorithmically assessing if the specified set of properties hold true for each possible state of the system model. If that is not the case, the model, the system specification and the system properties must be revised for a reverification.
+% Each system property is specified in the PSPFramework in a top-down manner. A property category is first chosen from the catalog patterns list by the software developer, who then refines it with the specific scope and complementary attributes, like time or probability constraints. As a consequence, a sentence in structured English is created, which will then be mapped to an appropriate logic formalism. The mapping rule takes into account the property category and scope defined earlier to match a logic formula template from the catalog, which is written in a target language, like CSL or TCTL. Finally, the given time and probability constraints are inserted into the formula using an attribute assessment mechanism. The result is a formally expressed property, ready to be verified. In our work, the resultant property set will be written in Timed Computational Tree Logic (TCTL) \cite{1996TCTL}, since that is the language used by UPPAAL when verifying the formalized model's real-time features. 
 
-\subsection{Prototype Implementation}
+% Our work also leverages the use of the Observer Technique as an additional step towards providing evidence that the system behaves as expected. This approach is utilized in the checker to allow the verification of properties that go beyond simple reachability \cite{1998ReachabilityObs}. It consists of the translation of the TCTL formulas to finite-state automata that are added the model to be verified. These state machines are engineered to reach error states only when the observed property in the system model is violated \cite{1999Observers}. 
+% % Formally, the Observer can be defined as an automaton \(T_{\phi}\) that interacts with the system \(S\) in a way that none of the error states of \(T_{\phi}\) are reached if the property \(\phi\) is satisfied. 
+% The translation is performed by using an Observer Template catalog \cite{2022PSP} designed for model checking real-time systems in UPPAAL. Analogously to the property specification process, the property pattern and its corresponding scope are mapped to Observer UPPAAL template models in the catalog. As a result, each monitorable property will have a corresponding observer automata in the system model.
 
-After assuring the correctness of the system through model checking, the second activity of this step is the implementation of a prototype for the system being developed. The major purpose is to replicate the system's behavior in order to generate reliable data for the context analysis process. The prototype operation dataset will be passed on to the next stage of our framework to convey the context discovery potential by means of artificial intelligence while still in the design phase.
+% Finally, the generated formulas will be verified for reachability, safety or liveness in the modeled system, by a process called Model Checking. The TCTL model-checking problem is to determine for a particular timed automaton TA and TCTL formula \(\phi\) whether TA  \(\vDash \phi\) \cite{2008PrinciplesModelChecking}. In this work, a tool named UPPAAL \cite{UPPAAL} will be used to solve this problem by algorithmically assessing if the specified set of properties hold true for each possible state of the system model. If that is not the case, the model, the system specification and the system properties must be revised for a reverification.
 
-The execution of the prototype can be easily related to the innate immunity, during the immunological response. The running simulation will be the first to face the contextual variability in the environment, just as the innate immunity is the first line of defense against the pathogens \cite{Kuby2019}. Inherited from the individual's progenitors, the nonspecific immunological mechanism is responsible for triggering the adaptive immunity by phagocyting the antigen and sending it to better enhance the lymphocytes. Similarly, our prototype is assured by "naive" observers, who may not be specific enough to account for all of the uncertainty in its surroundings. The observers are enhanced in the next step, by learning from the operation dataset, genereated by the simulation.
+% \subsection{Prototype Implementation}
 
-Having said that, the prototype is implemented by a simulation tool, based on the designed software architecture. Each module is build in a way to reflect the intended behavior of the system to be. The naive observers are also implemented so that the execution of the simulation may be monitored for the provision of assurances. In our work, we will use the Modelica language and the Open Modelica tool for this purpose.
+% After assuring the correctness of the system through model checking, the second activity of this step is the implementation of a prototype for the system being developed. 
+FIXME
+The initial step of our approach addresses the complex relation between the cybernetic and physical natures of the CPS through the implementation of a prototype of the system.  % Explain further how this will be done by looking at the background
+The major purpose is to replicate the system's behavior in order to generate reliable data for the analysis phase. Multiple runs of the simulation with varying configurations will be performed as a means to generate an operation dataset that accounts for the variability that will be faced in runtime. This dataset will be passed on to the next stage of our framework to convey the patterns in the anomalous executions by means of artificial intelligence.
 
-The Modelica Language is a language used to design cyber-physical systems. It allows for the causal linking of modules that are regulated by mathematical equations \cite{Modelica}. It is a text-based language used to specify all components of a model, and to organize them into packages. In order to graphically edit and explore a Modelica model, as well as run model simulations and other analyses, a suitable Modelica simulation environment is required \cite{ModelicaSpecs}. The Open Modelica is a tool that fills in this gap by providing an open-source modeling and simulation environment for the Modelica language \cite{OpenModelica}. It is considered to be the most complete open-source modelica simulation tool \cite{OpenModelicaIM}.
+The execution of the prototype can be easily related to the innate immunity, during the immunological response. The running simulation will be the first to face the variability in the environment, just as the innate immunity is the first line of defense against the pathogens \cite{Kuby2019}. In the biological system, the nonspecific immunological mechanism is responsible for triggering the adaptive immunity by phagocyting the antigen and sending it to better enhance the lymphocytes. Similarly, our prototype is assured by "naive" observers, who may not be specific enough to account for all of the scenarios that may happen. The operation dataset derived from the simulation is sent to the next phase to trigger an adaptive response, that learns from the property violation cases and provides the analyst the knowledge needed to enhance the observers for a better response in runtime.
+
+The prototype can be implemented by following a state-of-the-art approach that attempts to assess the complexity of the task. Baras \cite{baras2019formal}, for example, uses a Model-Based System Engineering (MBSE) approach that integrates several tools and languages for this purpose. SysML \cite{balestrini2015object}, a system architecture language, is first used for describing the system's structure and behavior. This tool is combined with Modelica \cite{Modelica}, a language that allows for the physical processes, i.e. the continuous time modeling of the physical phenomena and the linking of modules that are regulated by mathematical equations. In order to graphically edit and explore a Modelica model, as well as run model simulations and other analyses, an open-source modeling and simulation environment for the Modelica language called OpenModelica \cite{OpenModelica} can be utilized. Baras also uses MATLAB \cite{higham2016matlab} as a means to describe the software nature of the CPS, meaning the control and signal processing components. The integration of such technologies is done through the Functional Mock-up Interface (FMI) \cite{blochwitz2011functional}, which is a standard for the interchange of dynamic models and co-simulation.
+
+Fei \cite{deng2019modeling}, in turn, proposes a less tool-dense modeling guide for CPSs that comprises the 4 layers of abstraction mentioned in Section \ref{sec:bgCPS}, which are modeled in SysML and simulated using only Modelica. Bouskela et al. \cite{bouskela2022formal} goes in a similar direction by simulating the system with Modelica and verifying the requirements using the FOrmal Requirements Modeling Language (FORM-L) \cite{nguyen2014form}.
+
+% talk about the embedded_systems module in Modelica.
+
+To achieve the purpose of this work, a simpler framework for the implementation of the prototype will sufice. Since Modelica is one of the most often used tools in the MBSE field \cite{mohamed2021model}, the prototype is written in this language and runs in the OpenModelica simulation environment. Each module is designed to mirror the expected behavior of the system to be, based on the designed software architecture. The naive observers are also implemented so that the execution of the simulation may be monitored for the provision of assurances.
 
 With the prototype in place, many simulations with varying inputs, settings, and setups may be conducted to account for as much context variability as feasible. Each experiment will yield a dataset comprising the execution traces, resource usage, and context conditions at each stage of the execution. In the end, the generated datasets will be stored for the execution of the next step.
 
@@ -70,7 +77,7 @@ With the prototype in place, many simulations with varying inputs, settings, and
 % \section{Enhancing Context Specification Through Learning}
 \section{Adaptive Immunity Through Learning}
 
-Our framework's next phase tries to improve context specification using learning approaches. It is performed for each monitorable TCTL property specified in the previous phases. The data created in the preceding stage, goes through a feature engineering process for reshaping and labeling the rows regarding the property satisfiability. Following that, the set of rows in which the property is met (self-set) is run through the Negative Selection Algorithm to build detectors for the complementary set (nonself-set). These detectors are evaluated in order to uncover novel context variability, which is then utilized to improve the observers.
+Our framework's next phase tries to diagnose property violations using learning approaches. It is performed for each monitorable property of the system. The data created in the preceding stage, goes through a feature engineering process for reshaping and labeling the rows regarding the property satisfiability. Following that, the set of rows in which the property is met (self-set) is run through the Negative Selection Algorithm to build detectors for the complementary set (nonself-set). These detectors are evaluated in order to uncover patterns in the execution segments that violate the property at hand, which are then utilized to improve the observers.
 
 % What do we mean by monitorable?
 % https://github.com/lesunb/ais_bsn/wiki/Experiments
