Added the BSN chapter

--- a/qualificacao.tex
+++ b/qualificacao.tex
@@ -7,7 +7,7 @@
 %  - Pós-graduação: [qualificacao], mestrado|doutorado, ppca|ppginf
 
 % \documentclass[engenharia]{UnB-CIC}%
-\documentclass[qualificacao,mestrado,ppginf]{UnB-CIC}%
+\documentclass[mestrado,ppginf]{UnB-CIC}%
 
 \usepackage{pdfpages}% incluir PDFs, usado no apêndice
 \usepackage{xcolor, soul}
@@ -45,7 +45,7 @@
     \capitulo{1_Introduction}{Introduction}\label{sec:intro}
     \capitulo{2_Background}{Background}
     \capitulo{BSN}{Running Example: Body Sensor Network}
-    \capitulo{4_Proposal}{An AIS-based approach to reduce uncertainty in self-adaptive systems}
+    \capitulo{4_Proposal}{Enhancing Property Specification of Cyber-Physical Systems using Negative Selection}
     \capitulo{3_RelatedWork}{Related work}
     \capitulo{5_Evaluation}{Schedule}
     % \capitulo{6_Conclusion}{Conclusion and future work}
