--- a/tex/BSN.tex
+++ b/tex/BSN.tex
@@ -45,7 +45,7 @@ Another important aspect of the BSN that need to be addressed for the verificati
 
 Properties P1 and P2 relate to general aspects of the system behavior by accounting for problems that are common in distributed systems, like deadlocks and the execution of all modules within a cycle, respectively. P3 is related to the root goal and addresses the soft goal G0, which presents a time bound for the execution of a cycle.  P4, P5 and P6 were designed to assess Goal G3 in relation to the context variability that it possess. Property P7, in turn, relates to G2 and was slightly modified here with the addition of the soft goal G0.1. This was done to better clarify some of the processes that are performed during the data processing step of our approach. Besides that, for the verification of the property using an obsever suring the simulation, a time bound needed to be added so that the error state could be reached whithin a cycle. Finally, properties P8, P9 and P10 ensure that the goals G4 and G5 are met and that the data is whithin the expected range.
 
-
+FIXME
 \begin{table}[!h]
 	\begin{tabular}{lccccc}
 	\hline
